Reduce transparency on thumbnail overlay to make sure contrast is always high enough

--- a/assets/css/3-sections/_thumbnails.sass
+++ b/assets/css/3-sections/_thumbnails.sass
@@ -20,7 +20,7 @@
   .thumb-overlay
     +position(absolute, 100% 0px null 0px)
     height: 100%
-    background: fade-out(#333, 0.5)
+    background: fade-out(#333, 0.4)
     text-align: center
     //+transition
     +display(flex)
